# Python_roadmap_journey

Basics#1/: calculator.py  multiplication_table.py  number_guesser.py  vowel_counter.py
Basics#2/: pizza_order.py  quiz.py  unit_converter.py
Common_Packages/package_managers/: pyproject.toml  weather_cli.py
Common_Packages/text_analyzer/: text_analyzer.py
Common_Packages/timer_logger/: timer_logger.py
Data_Structures/: browser_history.py  lru_cache.py
Data_Structures#2/: BST_contact_book.py  recursion_hanoi.py  sorting_benchmark.py
OOP/: mini_library_manager.py
Python_Concepts/: logger.py  password_gen.py  text_utils.py  user_filter.py
