#package_managers/pyptoject.toml
[tool.poetry]
name = "weather-cli"
version = "0.1.0"
description = "Small CLI using requests/typer/rich + project.toml demo"
authors = ["Karol Polak"]
readme = "Readme.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.0"
typer = "^0.12.3"
rich = "^13.7.1"

[tool.poetry.scripts]
weather = "weather_cli:app"
